# iqinsyt_backend

./: .env.example  .gitignore  FRONTEND_STREAMING_INTEGRATION.md  README.md  architecture.md  architecture_backend.md  architecture_webapp.md  main.py  pyproject.toml  server_run.py
.agents/agents/: code-simplicity-reviewer.md
.agents/skills/coding-skills/: SKILL.md
src/api/: server.py
src/api/v1/: research.py  schemas.py
src/core/: config.py  database.py  dependencies.py  exceptions.py  logging_config.py
src/db/: __init__.py  client.py  helpers.py  models.py
src/services/: cache_service.py  compliance_service.py  deepdown_service.py  llm_service.py  research_service.py  search_service.py
src/services/cache/: mongo.py
src/services/llm/: openai.py  prompts.py
src/services/search/: brave.py  searxng.py  service.py
