[project]
name = "iqinsyt-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.6",
    "gunicorn>=25.0.3",
    "beanie<2.0",
    "motor>=3.3.2",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "openai>=1.35.0",
]
